# grpo_test

./: .gitignore  README.md  config.py  data_utils.py  grpo_trainer.py  inference.py  log.txt  main.py  make_data.py  pyproject.toml  reward_functions.py  shogi_engine.py  shogi_utils.py  test.ipynb
datasets/: positions.csv  training_data.jsonl
game/: __init__.py  engine_interface.py  shogi_game.py
models/: __init__.py  model_factory.py
src/config/: __init__.py
src/data/: __init__.py  data_generator.py  dataset.py
src/models/: __init__.py  model_config.py  model_factory.py
src/rewards/: __init__.py  base.py  evaluation.py  format.py
src/shogi/: __init__.py  engine.py  utils.py
src/trainer/: __init__.py  grpo_trainer.py  trainer_base.py
test/: test.ipynb
trainer/: __init__.py  base_trainer.py  grpo_trainer.py  online_trainer.py
utils/: __init__.py  logging.py  reward_functions.py
