[project]
name = "grpo-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diffusers>=0.32.2",
    "trl",
    "unsloth>=2025.2.5",
    "vllm>=0.7.2",
    "wandb>=0.19.6",
]

[tool.uv.sources]
trl = { git = "https://github.com/huggingface/trl.git", rev = "e95f9fb74a3c3647b86f251b7e230ec51c64b72b" }
